2011-10-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the argument of the function
	`twittering-read-username-with-completion'. Thanks to Akira
	Tamamori who reported a problem caused by the bug.
	(twittering-read-timeline-spec-with-completion): fix the argument
	of the function `twittering-read-username-with-completion'.

2011-10-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Allow users to supplement a username for
	timeline specs with a following username afterward.
	(twittering-read-timeline-spec-with-completion): allow users to
	supplement a username for timeline specs with a following username
	afterward.

	* twittering-mode.el: Add a username to the variable
	`twittering-user-history' after retrieving a user timeline.
	(twittering-timeline-spec-is-user-p): new function.
	(twittering-add-timeline-history): add a username to the history
	bound to `twittering-user-history' if the given spec is a user
	timeline.

	* twittering-mode.el: Fix the macro
	`twittering-revive:prop-get-value'.
	(twittering-revive:prop-get-value): use `macroexpand' instead of
	`macroexpand-all'.

2011-09-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Users can post a tweet consisting of only
	mentions from the pop-up buffer.
	(twittering-edit-post-status): check a tweet with a simple regexp
	instead of `twittering-status-not-blank-p'.

	* twittering-mode.el: Add functions for `revive.el'.
	(twittering-revive:prop-get-value): new macro defined only when
	compiling `twittering-mode.el'.
	(twittering-revive:twittering): new function for restoring a
	timeline buffer with `revive.el'.
	(twittering-setup-revive): new function configuring `revive.el'
	for restoring a timeline buffer.

	* twittering-mode.el: `twittering-update-status' receives a
	tweet-type symbol instead of a timeline spec. It replaces a
	timeline spec representing whether the tweet beingedited is a
	direct message or not.